tests/mlir/snapshots/mlir__core__load_ub_twice.snap
---
source: tests/mlir/core.rs
assertion_line: 4
expression: output
---
module {
  func.func @memory_load(%arg0: memref<16xi16, #hivm.address_space<gm>>, %arg1: memref<16xi16, #hivm.address_space<gm>>) attributes {hacc.entry, hacc.function_kind = #hacc.function_kind<DEVICE>} {
    %alloc0 = memref.alloc() : memref<16xi16, #hivm.address_space<ub>>
    hivm.hir.load ins(%arg0 : memref<16xi16, #hivm.address_space<gm>>) outs(%alloc0 : memref<16xi16, #hivm.address_space<ub>>)
    %alloc1 = memref.alloc() : memref<16xi16, #hivm.address_space<ub>>
    hivm.hir.load ins(%arg1 : memref<16xi16, #hivm.address_space<gm>>) outs(%alloc1 : memref<16xi16, #hivm.address_space<ub>>)
    return
  }
}
