tests/mlir/snapshots/mlir__core__ref_deref.snap
---
source: tests/mlir/core.rs
assertion_line: 4
expression: output
---
module {
  func.func @main() -> i32 {
    %c41_i32 = arith.constant 41 : i32
    %alloca = memref.alloca() : memref<i32>
    memref.store %c41_i32, %alloca[] : memref<i32>
    %0 = memref.load %alloca[] : memref<i32>
    %c1_i32 = arith.constant 1 : i32
    %1 = arith.addi %0, %c1_i32 : i32
    memref.store %1, %alloca[] : memref<i32>
    %2 = memref.load %alloca[] : memref<i32>
    return %2 : i32
  }
}
