tests/mlir/snapshots/mlir__core__vec_add_2_ops.snap
---
source: tests/mlir/core.rs
expression: output
---
module {
  func.func @add(%arg0: memref<16xi16, #hivm.address_space<gm>>, %arg1: memref<16xi16, #hivm.address_space<gm>>, %arg2: memref<16xi16, #hivm.address_space<gm>>, %arg3: memref<16xi16, #hivm.address_space<gm>>, %arg4: memref<16xi16, #hivm.address_space<gm>>) attributes {hacc.entry, hacc.function_kind = #hacc.function_kind<DEVICE>} {
    %alloc = memref.alloc() : memref<16xi16, #hivm.address_space<ub>>
    hivm.hir.load ins(%arg0 : memref<16xi16, #hivm.address_space<gm>>) outs(%alloc : memref<16xi16, #hivm.address_space<ub>>)
    %alloc_0 = memref.alloc() : memref<16xi16, #hivm.address_space<ub>>
    hivm.hir.load ins(%arg1 : memref<16xi16, #hivm.address_space<gm>>) outs(%alloc_0 : memref<16xi16, #hivm.address_space<ub>>)
    %alloc_1 = memref.alloc() : memref<16xi16, #hivm.address_space<ub>>
    hivm.hir.load ins(%arg2 : memref<16xi16, #hivm.address_space<gm>>) outs(%alloc_1 : memref<16xi16, #hivm.address_space<ub>>)
    %alloc_2 = memref.alloc() : memref<16xi16, #hivm.address_space<ub>>
    hivm.hir.vadd ins(%alloc, %alloc_0 : memref<16xi16, #hivm.address_space<ub>>, memref<16xi16, #hivm.address_space<ub>>) outs(%alloc_2 : memref<16xi16, #hivm.address_space<ub>>)
    hivm.hir.store ins(%alloc_2 : memref<16xi16, #hivm.address_space<ub>>) outs(%arg3 : memref<16xi16, #hivm.address_space<gm>>)
    %alloc_3 = memref.alloc() : memref<16xi16, #hivm.address_space<ub>>
    hivm.hir.vadd ins(%alloc_0, %alloc_1 : memref<16xi16, #hivm.address_space<ub>>, memref<16xi16, #hivm.address_space<ub>>) outs(%alloc_3 : memref<16xi16, #hivm.address_space<ub>>)
    hivm.hir.store ins(%alloc_3 : memref<16xi16, #hivm.address_space<ub>>) outs(%arg4 : memref<16xi16, #hivm.address_space<gm>>)
    return
  }
}
