tests/mlir/snapshots/mlir__core__vec_add_threads_sched.snap
---
source: tests/mlir/core.rs
expression: output
---
module {
  func.func @npu_vec_add(%arg0: memref<i32, #hivm.address_space<gm>>, %arg1: memref<i32, #hivm.address_space<gm>>) attributes {hacc.entry, hacc.function_kind = #hacc.function_kind<DEVICE>} {
    return
  }
  func.func @main() {
    return
  }
}
